--- a/portfolio-2.0-frontend/src/Component/Navbar/Navbar.css
+++ b/portfolio-2.0-frontend/src/Component/Navbar/Navbar.css
@@ -8,8 +8,8 @@
 }
 
 .nav-content{
-    /* max-width: 1300px; */
-    max-width: 1200px;
+    max-width: 1300px;
+    /* max-width: 1200px; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -63,4 +63,67 @@
 .contact-btn{
     font-size: 0.9rem;
     font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: linear-gradient(90deg, #a993fe 0%, #7e61e7 100%);
+    padding: 0.6rem 2rem;
+    border: none;
+    outline: 1.5px solid transparent;
+    border-radius: 0.2rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.contact-btn:hover{
+    color:#7e61e7 ;
+    background: #000;
+    outline: 1.5px solid #7e61e7;
+}
+
+.menu-btn{
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 0.4rem;
+    color: #fff;
+    background: linear-gradient(90deg, #a993fe -0.13%, #7e61e7 99.87%);
+    line-height: 0;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    display: none;
+}
+
+.menu-btn:hover{
+    color: #a993fe;
+    background: #000;
+    border: 1px solid #7e61e7;
+}
+
+@media (max-width: 425px){
+    .logo{
+        width: 10rem;
+        height: auto;
+    }
+}
+
+@media (max-width: 769px){
+    .menu-btn{
+        display: block;
+    }
+
+    .nav-content ul{
+        display: none;
+    }
+}
+
+@media (max-width: 1325px){
+    .nav-wrapper{
+        padding: 0 2rem;
+    }
 }
